--- a/NeurIPS模板/references.bib
+++ b/NeurIPS模板/references.bib
@@ -12,7 +12,7 @@
 @misc{decoding_speculative,
   title         = {Decoding Speculative Decoding},
   author        = {Yan, Minghao and Agarwal, Saurabh and Venkataraman, Shivaram},
-  year          = {2025},
+  year          = {2024},
   eprint        = {2402.01528},
   archivePrefix = {arXiv},
   primaryClass  = {cs.LG},
@@ -157,6 +157,47 @@
   year         = {2024},
   howpublished = {\url{https://medium.com/learnwithnk/decoding-real-time-llm-inference-a-guide-to-the-latency-vs-throughput-bottleneck-c1ad96442d50}},
   note         = {Accessed: 2026-01-03}
+}
+
+% Robustness and systems perspectives (from related_work.md)
+@misc{spin,
+  title         = {SPIN: Accelerating Large Language Model Inference with Heterogeneous Speculative Models},
+  author        = {Chen, Fahao and Li, Peng and Luan, Tom H. and Su, Zhou and Deng, Jing},
+  year          = {2025},
+  eprint        = {2503.15921},
+  archivePrefix = {arXiv},
+  primaryClass  = {cs.CL},
+  url           = {https://arxiv.org/abs/2503.15921}
+}
+
+@misc{owl,
+  title         = {OWL: Overcoming Window Length-Dependence in Speculative Decoding for Long-Context Inputs},
+  author        = {Lee, Jaeseong and Hwang, Seung-Won and Qiao, Aurick and Oliaro, Gabriele and Wang, Ye and Rajbhandari, Samyam},
+  year          = {2025},
+  eprint        = {2510.07535},
+  archivePrefix = {arXiv},
+  primaryClass  = {cs.CL},
+  url           = {https://arxiv.org/abs/2510.07535}
+}
+
+@misc{judge_decoding,
+  title         = {Judge Decoding: Faster Speculative Sampling Requires Going Beyond Model Alignment},
+  author        = {Bachmann, Gregor and Anagnostidis, Sotiris and Pumarola, Albert and Georgopoulos, Markos and Sanakoyeu, Artsiom and Du, Yuming and Sch{\"o}nfeld, Edgar and Thabet, Ali and Kohler, Jonas},
+  year          = {2025},
+  eprint        = {2501.19309},
+  archivePrefix = {arXiv},
+  primaryClass  = {cs.CL},
+  url           = {https://arxiv.org/abs/2501.19309}
+}
+
+@misc{traversal_verification,
+  title         = {Traversal Verification for Speculative Tree Decoding},
+  author        = {Weng, Yepeng and Hu, Qiao and Chen, Xujie and Liu, Li and Mei, Dianwen and Qiu, Huishi and Tian, Jiang and Shi, Zhongchao},
+  year          = {2025},
+  eprint        = {2505.12398},
+  archivePrefix = {arXiv},
+  primaryClass  = {cs.CL},
+  url           = {https://arxiv.org/abs/2505.12398}
 }
 
 
